@@ -1,4 +1,3 @@
-edit-menus/edit-menus.c
 gcalc/gcalc.c
 gdiskfree/df.c
 gedit/commands.c
@@ -17,17 +16,14 @@ ghex/gnome-support.c
 ghex/main.c
 ghex/ui.c
 gncal/calobj.c
-gncal/clist.c
 gncal/eventedit.c
 gncal/getdate.y
 gncal/gncal-day-view.c
 gncal/gncal-full-day.c
 gncal/gncal-todo.c
-gncal/gncal.c
 gncal/gnome-cal.c
 gncal/gnomecard/gnomecard.c
 gncal/main.c
-gncal/objedit.c
 gncal/popup-menu.c
 gncal/prop.c
 gncal/timeutil.c
@@ -36,7 +32,6 @@ gncal/versit/vcc.y
 gncal/versit/vobject.c
 gncal/versit/vobject.h
 gsearchtool/gsearchtool.c
-gstripchart/gstripchart.c
 gtop/details.c
 gtop/main.c
 gtop/memusage.c
@@ -56,7 +51,6 @@ gtt/toolbar.c
 mini-utils/gless/gless.c
 mini-utils/gnome-run/gnome-run.c
 mini-utils/gshutdown/gshutdown.c
-mini-utils/gsu/gsu.c
 mini-utils/guname/guname.c
 mini-utils/guname/info.c
 mini-utils/guname/moreinfo.c
