@@ -1,3 +1,7 @@
+1998-08-17  Federico Mena Quintero  <federico@nuclecu.unam.mx>
+
+	* POTFILES.in: Removed a little bunch of missing files from POTFILES.in.
+
 1998-08-16  Martin Baulig  <martin@home-of-linux.org>
 
 	* de.po: Updated German translation.
